--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -248,3 +248,9 @@ html:before {
     margin-left: -400px;
     cursor: w-resize;
 }
+
+#app {
+    max-width: 420px;
+    margin: 0 auto;
+    width: 100%;
+}
