--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -92,7 +92,8 @@ html:before {
 
 .hotelPicker {
 
-    position: absolute;top: 50%;left: 50%;transform: translate(-50%, -50%);width: 100%;max-width: 420px;
+    position: absolute;;width: 100%;max-width: 420px;
+    top: 50%;left: 50%;transform: translate(-50%, -80%);
     padding: 10px 10px;
     border-radius: 3px;background: white;box-shadow: 0 1px 3px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);}
 
@@ -253,4 +254,32 @@ html:before {
     max-width: 420px;
     margin: 0 auto;
     width: 100%;
+}
+
+.startagain {
+    max-width: 420px;
+    display: block;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -20%);
+    bottom: 0;
+}
+
+.startagain a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 5px solid white;
+    padding: 9px;
+    border-radius: 4px;
+}
+
+.startagain img {
+    width: 40px;
+    margin-right: 22px;
+}
+
+.startagain h3 {
+    color: white;
+    font-size: 2em;
 }
